src/objects/Intel_TAS_Integration_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>API_Key__c</fullName>
        <defaultValue>&quot;nKzSymtP20FhP346kIGVUZwZ7W9+0jMe&quot;</defaultValue>
        <description>The key used in callout headers to bypass username/pw authentication</description>
        <label>API Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Intel TAS Integration Setting</label>
</CustomObject>